Fix off-screen bug

--- a/dialog.css
+++ b/dialog.css
@@ -4,7 +4,6 @@
   bottom:0;
   right:0;
   width:350px;
-  height:250px;
   background-color:#8D41D6;
   z-index:100;
   font-family:verdana,helvetica,arial,sans-serif;
